<resources>
    <string name="app_name">UdacityMyAppPortfolio</string>
    <string name="text_mynanodegreeapps">My Nanodegreee Apps!</string>
    <string name="text_popular_movies">POPULAR MOVIES</string>
    <string name="text_stock_hawk">STOCK HAWK</string>
    <string name="text_build_it_bigger">BUILD IT BIGGER</string>
    <string name="text_make_your_app_material">MAKE YOUR APP METERIAL</string>
    <string name="text_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="text_capstone">CAPSTONE</string>
    <string name="toast_format">This button will launch %1$s app!</string>
</resources>
