<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lukelin.udacitymyappportfolio.MainActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_mynanodegreeapps"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/text_popular_movies"
        android:onClick="onPopularMoviesButtonClick"/>

    <Button
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/text_stock_hawk"
        android:onClick="onStockHawkButtonClick"/>

    <Button
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/text_build_it_bigger"
        android:onClick="onBuildItBiggerButtonClick"/>

    <Button
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/text_make_your_app_material"
        android:onClick="onMakeYourAppMaterialButtonClick"/>

    <Button
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/text_go_ubiquitous"
        android:onClick="onGoUbiquitousButtonClick"
        />

    <Button
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:text="@string/text_capstone"
        android:onClick="onCapstoneButtonClick"/>
</LinearLayout>
